--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,17 +165,17 @@ plugins:
   - search
   - tags:
       tags_file: tags.md
-  # - blog:
-  #     post_url_format: "{slug}"
-  #     authors_file: "{blog}/.authors.yml"
-  #     blog_toc: true
-  #     post_excerpt_separator: <!-- more -->
-  #     categories_name: Categories
-  #     categories_toc: true
-  #     pagination: true
-  #     pagination_per_page: 10
-  #     draft: true
-  #     archive: false
+  - blog:
+      post_url_format: "{slug}"
+      authors_file: "{blog}/.authors.yml"
+      blog_toc: true
+      post_excerpt_separator: <!-- more -->
+      categories_name: Categories
+      categories_toc: true
+      pagination: true
+      pagination_per_page: 10
+      draft: true
+      archive: false
 
 nav:
   - Inicio: index.md
