--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -8,3 +8,8 @@ authors:
     name: Openterface
     description: ¡Hola!
     avatar: /images/op-avatar.jpg
+
+  CNXSOFT:
+    name: JEAN-LUC AUFRANC CNXSOFT
+    description: Jean-Luc fundó CNX Software en 2010 como una empresa a tiempo parcial, antes de dejar su trabajo como gerente de ingeniería de software y comenzar a escribir noticias diarias y reseñas a tiempo completo más adelante en 2011.
+    avatar: https://www.cnx-software.com/wp-content/uploads/2023/05/Jean-Luc-Aufranc.webp
