enables ko, fr, de, it

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,18 +96,18 @@ extra:
     - name: 日本語
       link: https://jp.openterface.com/
       lang: ja
-    # - name: 한국어
-    #   link: https://kr.openterface.com/
-    #   lang: ko
-    # - name: Français
-    #   link: https://fr.openterface.com/
-    #   lang: fr
-    # - name: Deutsch
-    #   link: https://de.openterface.com/
-    #   lang: de
-    # - name: Italiano
-    #   link: https://it.openterface.com/
-    #   lang: it
+    - name: 한국어
+      link: https://kr.openterface.com/
+      lang: ko
+    - name: Français
+      link: https://fr.openterface.com/
+      lang: fr
+    - name: Deutsch
+      link: https://de.openterface.com/
+      lang: de
+    - name: Italiano
+      link: https://it.openterface.com/
+      lang: it
     - name: Español
       link: https://es.openterface.com/
       lang: es
