--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ copyright: >-
 
 extra_css:
   - assets/stylesheets/extra.css
+  - assets/stylesheets/signup_form.css
 
 extra_javascript:
   - assets/javascripts/extra.js
@@ -102,14 +103,15 @@ extra:
     - name: English
       link: https://openterface.com/
       lang: en
-    - name: 简中文
+    - name: 简体中文
+      lang: zh
       link: https://cn.openterface.com/
     - name: 日本語
-      link: https://jp.openterface.com/
       lang: ja
+      link: https://jp.openterface.com/
     - name: 한국어
-      link: https://kr.openterface.com/
       lang: ko
+      link: https://kr.openterface.com/
     - name: Français
       link: https://fr.openterface.com/
       lang: fr
@@ -122,7 +124,6 @@ extra:
     - name: Español
       link: https://es.openterface.com/
       lang: es
-      lang: zh
     - name: Português
       link: https://pt.openterface.com/
       lang: pt
